--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,7 @@
             <div class="aside">
                 <nav>
                     <div class="slider-nav">
-                        <img src="/assets/images/001.jpg" alt="">
+                        <img src="/assets/images/003.jpg" alt="">
                         <h1>Paul Sadou </h1>
                         <p>Web Designer</p>
                     </div>
@@ -33,69 +33,74 @@
                         <i class="fa-brands fa-facebook-f"></i>
                         <i class="fa-brands fa-google-plus-g"></i>
                     </div>
-                    <div class="navbar"></div>
+                    <div class="navbar">
+                    </div>
                 </nav>
             </div>
             <div class="about-me">
-                <div class="about-content">
-                    <div class="about-title flex">
-                        <header>
-                            <h2>About Me</h2>
-                        </header>
-                        <p>Artist, Thinker, Creative Doer</p>
-                    </div>
-                    <div class="web-developer flex gap-30 ">
-                        <div class="web-developer-designer flex-center ">
-                            <h3>I am Web Design/Developer @ Company.com</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis quos inventore
-                                voluptatem at! Inventore, possimus tempora ratione veritatis velit voluptate
-                                consequuntur temporibus, fugit eaque saepe iste dolor magnam animi facilis?
-                                Sit soluta qui voluptate. Corrupti laudantium optio nam architecto ab officia
-                                cupiditate, hic, laboriosam maxime similique quos unde, rerum temporibus. Beatae veniam,
-                                placeat neque minima impedit odit perspiciatis necessitatibus quam!
-                                Sit soluta qui voluptate. Corrupti laudantium optio nam architecto ab officia
-                                cupiditate, hic, laboriosam maxime similique quos unde, rerum temporibus. Beatae veniam,
-                                placeat neque minima impedit odit perspiciatis necessitatibus quam!
-                                Beatae veniam, placeat neque minima impedit odit perspiciatis necessitatibus quam!
-                            </p>
+                <div class="about-me-content">
+                    <div class="about-title flex gap-10">
+                        <div class="slider">
+                            <h1>About-Me</h1>
                         </div>
-                        <div class="testimonial m-20">
-                            <h4><u>Testimonial</u></h4>
-                            <div class="paragraphe text-center">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto praesentium ab quos
-                                    optio rem qui maxime iure suscipit repudiandae. Maxime animi optio vitae ad modi
-                                    nobis rem soluta fuga.</p>
-                            </div>
-                            <img src="/assets/images/testimonial2.png" alt="">
-                            <p>Morris Bryan <br> <span>SUN/FOODS</span></p>
-                            <div class="defile">
-                                <i class="fa-solid fa-chevron-left"></i>
-                                <i class="fa-solid fa-chevron-right"></i>
+                        <p>Artist, Think, Creative Doer</p>
+                    </div>
+                    <div class="web-designer flex gap-30 m-10">
+                        <div class="web-designer-developer flex-6">
+                            <h2>Web Designer/Developer @ Company.com</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+                                nemo, debitis sed illo officiis ipsa suscipit voluptatibus a voluptate, blanditiis
+                                itaque repellendus expedita quam cumque perspiciatis neque magni laborum eligendi?
+                                Reiciendis quos obcaecati laudantium eos natus, aspernatur tenetur alias cum quidem
+                                maiores facere optio voluptate itaque illum numquam, repellendus, neque quod voluptas
+                                reprehenderit eligendi? Praesentium impedit laudantium dicta libero sit?</p>
+                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+                                nemo, debitis sed illo officiis ipsa suscipit voluptatibus a voluptate, blanditiis
+                                itaque repellendus expedita quam cumque perspiciatis neque magni laborum eligendi?
+                                Reiciendis quos obcaecati laudantium eos natus, aspernatur tenetur alias cum quidem
+                                maiores facere optio voluptate itaque illum numquam, repellendus, neque quod voluptas
+                                reprehenderit eligendi? Praesentium impedit laudantium dicta libero sit?</p>
+                        </div>
+                        <div class="web-designer-developer">
+                            <h3><u>Testimonial</u></h3>
+                            <div class="slider-right">
+                                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Molestiae nemo, debitis sed illo officiis ipsa suscipit.
+                                </p>
+                                <div class="items-line flex">
+                                    <img src="/assets/images/testimonial2.png" height="60" alt="">
+                                    <p>Bryan Moris <br> <span>sun foods</span></p>
+                                    <div class="defile">
+                                        <i class="fa-solid fa-chevron-left"></i>
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="services">
-                        <h5><u>Service</u></h5>
-                        <div class="services-line flex">
-                            <div class="services-line-item">
-                                <img src="/assets/images/Service1.png" alt="">
-                                <h6>Web Designer</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                    <div class="services m-10">
+                        <h4><u>Services</u></h4>
+                        <div class="services-line flex m-10">
+
+                            <div class="services-line-items">
+                                <img src="/assets/images/Service1.png" height="60" alt="">
+                                <h5>We Designer</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                             </div>
-                            <div class="services-line-item">
-                                <img src="/assets/images/Service2.png" alt="">
-                                <h6>Web Designer</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            <div class="services-line-items">
+                                <img src="/assets/images/Service2.png" height="60" alt="">
+                                <h5>Copywriter</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                             </div>
-                            <div class="services-line-item">
-                                <img src="/assets/images/Service3.png" alt="">
-                                <h6>Web Designer</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            <div class="services-line-items">
+                                <img src="/assets/images/Service3.png" height="60" alt="">
+                                <h5>E-commerce</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                             </div>
-                            <div class="services-line-item">
-                                <img src="/assets/images/Service4.png" alt="">
-                                <h6>Web Designer</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            <div class="services-line-items">
+                                <img src="/assets/images/Service4.png" height="60" alt="">
+                                <h5>Management</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                             </div>
                         </div>
                     </div>
@@ -103,30 +108,16 @@
             </div>
         </div>
     </div>
-</body>
 
-</html>
+                    <!-- CONTAINER-2 -->
+<div class="container-2">
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet/html/css/portfolio</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
     <div class="container-suite">
         <div class="general-framework">
             <div class="aside">
                 <nav>
                     <div class="slider-nav">
-                        <img src="/assets/images/001.jpg" alt="">
+                        <img src="/assets/images/003.jpg" alt="">
                         <h1>Paul Sadou </h1>
                         <p>Web Designer</p>
                     </div>
@@ -145,91 +136,80 @@
                     <div class="navbar"></div>
                 </nav>
             </div>
-            <div class="about-me">
-                <div class="about-content">
-                    <div class="services">
-                        <h5><u>Service</u></h5>
-                        <div class="services-line flex">
-                            <div class="services-line-item">
-                                <img src="/assets/images/Service1.png" alt="">
-                                <h6>Web Designer</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
-                            </div>
-                            <div class="services-line-item">
-                                <img src="/assets/images/Service2.png" alt="">
-                                <h6>Web Designer</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
-                            </div>
-                            <div class="services-line-item">
-                                <img src="/assets/images/Service3.png" alt="">
-                                <h6>Web Designer</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
-                            </div>
-                            <div class="services-line-item">
-                                <img src="/assets/images/Service4.png" alt="">
-                                <h6>Web Designer</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
-                            </div>
+            <div class="about-me-suite">
+                <div class="services m-10">
+                    <h4><u>Services</u></h4>
+                    <div class="services-line flex m-10 flex-center-h">
+                        <div class="services-line-items flex-1">
+                            <img src="/assets/images/Service1.png" height="60" alt="">
+                            <h5>We Designer</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                         </div>
-                    </div>
-                    <div class="service-clients">
-                        <h1><u>Clients</u></h1>
-                        <div class="services-clients-line flex">
-
-                            <div class="service-clients-items flex-1">
-                                <img src="/assets/images/clients_1.png" alt="">
-                            </div>
-                            <div class="service-clients-items flex-1">
-                                <img src="/assets/images/clients_2.png" alt="">
-                            </div>
-                            <div class="service-clients-items flex-1">
-                                <img src="/assets/images/clients_3.png" alt="">
-                            </div>
-                            <div class="service-clients-items flex-1">
-                                <img src="/assets/images/clients_4.png" alt="">
-                            </div>
-                            <div class="service-clients-items flex-1">
-                                <img src="/assets/images/clients_5.png" alt="">
-                            </div>
+                        <div class="services-line-items flex-1">
+                            <img src="/assets/images/Service2.png" height="60" alt="">
+                            <h5>Copywriter</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
+                        </div>
+                        <div class="services-line-items flex-1">
+                            <img src="/assets/images/Service3.png" height="60" alt="">
+                            <h5>E-commerce</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
+                        </div>
+                        <div class="services-line-items flex-1">
+                            <img src="/assets/images/Service4.png" height="60" alt="">
+                            <h5>Management</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                         </div>
                     </div>
                 </div>
-                <div class="clients-happy">
-                    <h2><u>Fun Facts</u></h2>
-                    <div class="clients-line flex">
-                        <div class="clients-item flex-1">
-                            <div class="background">
-                                <img src="/assets/images/1_Happy-Clients.png" height="50" alt="">
-                                <p>Clients Happy <br> <span>1,024</span></p>
-                            </div>
 
+                <div class="clients m-10">
+                    <h6><u>clients</u></h6>
+                    <div class="clients-line flex m-10 flex-center-h">
+                        <div class="clients-line-items flex-1">
+                            <img src="/assets/images/clients_1.png" height="60" alt="">
                         </div>
-                        <div class="clients-item flex-1">
-                            <div class="background">
-                                <img src="/assets/images/2_Working Hour.png" height="50" alt="">
-                                <p>Working Hours <br> <span>6,256</span></p>
-                            </div>
-
+                        <div class="clients-line-items flex-1">
+                            <img src="/assets/images/clients_2.png" height="60" alt="">
                         </div>
-                        <div class="clients-item flex-1">
-                            <div class="background">
-                                <img src="/assets/images/3_Awords Won.png" height="50" alt="">
-                                <p>Aword Won <br> <span>21</span></p>
-                            </div>
-
+                        <div class="clients-line-items flex-1">
+                            <img src="/assets/images/clients_3.png" height="60" alt="">
                         </div>
-                        <div class="clients-item flex-1">
-                            <div class="background">
-                                <img src="/assets/images/4_Coffee Consumed.png" height="50" alt="">
-                                <p>Coffee Consumed <br> <span>20,000</span></p>
-                            </div>
-
+                        <div class="clients-line-items flex-1">
+                            <img src="/assets/images/clients_4.png" height="60" alt="">
+                        </div>
+                        <div class="clients-line-items flex-1">
+                            <img src="/assets/images/clients_5.png" height="60" alt="">
+                        </div>
+                        <div class="clients-line-items flex-1">
+                            <img src="/assets/images/clients_6.png" height="60" alt="">
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="fun-facts m-10">
+                    <h6><u>Fun facts</u></h6>
+                    <div class="fun-facts-line flex m-10 flex-center-h">
+                        <div class="fun-facts-line-items flex-1">
+                            <img src="/assets/images/1_Happy-Clients.png" height="60" alt="">
+                        </div>
+                        <div class="fun-facts-line-items flex-1">
+                            <img src="/assets/images/2_Working Hour.png" height="60" alt="">
+                        </div>
+                        <div class="fun-facts-line-items flex-1">
+                            <img src="/assets/images/3_Awords Won.png" height="60" alt="">
+                        </div>
+                        <div class="fun-facts-line-items flex-1">
+                            <img src="/assets/images/4_Coffee Consumed.png" height="60" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
+
 </body>
 
 </html>
